# scheduling

./: .env  Cargo.toml  diesel.toml  documentation.md  log4rs.yaml  readme.md
migrations/2025-02-09-193833_create_clients/: up.sql
migrations/2025-02-09-205523_create_clients/: up.sql
migrations/2025-02-09-212213_create_reservations/: down.sql  up.sql
migrations/2025-02-14-014609_create_reservations/: up.sql
migrations/2025-02-14-023010_create_reservations/: down.sql  up.sql
migrations/2025-02-19-000621_create_users/: up.sql
migrations/2025-02-28-001403_create_admins/: up.sql
migrations/2025-03-05-025854_add_user_id_to_clients/: down.sql  up.sql
migrations/2025-03-16-203840_add_approval_fields/: up.sql
migrations/2025-04-01-012421_create_professionals/: down.sql  up.sql
migrations/2025-04-01-022533_create_salon_settings/: down.sql  up.sql
migrations/2025-04-02-021520_create_availabilities/: down.sql  up.sql
migrations/2025-04-02-022400_create_services/: down.sql  up.sql
migrations/2025-04-02-022444_create_appointments/: down.sql  up.sql
migrations/2025-04-08-011321_add_created_at_to_users/: up.sql
migrations/2025-04-09-015028_alter_services_table/: up.sql
src/: config.rs  db.rs  main.rs  schema.rs  utils.rs
src/handlers/: admin.rs  appointment.rs  auth.rs  availability.rs  calendar.rs  mod.rs  professional.rs  reservations_handler.rs  salon_settings.rs  service.rs  user.rs
src/middleware/: auth_middleware.rs  cors.rs  mod.rs  rate_limit.rs
src/models/: admin.rs  appointment.rs  availability.rs  client.rs  mod.rs  professional.rs  reservation.rs  salon_settings.rs  service.rs  user.rs
src/routes/: appointments.rs  availabilities.rs  availability.rs  clients.rs  mod.rs  professionals.rs  reservations.rs  salon_settings.rs  services.rs  users.rs
src/services/: admin_service.rs  auth_service.rs  client_service.rs  mod.rs  reservation_service.rs
