[package]
name = "scheduling"
version = "0.1.0"
edition = "2021"

[dependencies]
# Axum e dependências relacionadas
axum = { version = "0.8.1", features = ["macros", "http1", "http2"] }
axum-extra = "0.10.0"
hyper = { version = "0.14", features = ["http1", "http2", "server"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialização e desserialização
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Banco de dados e migrações
diesel = { version = "2", features = ["postgres", "r2d2", "chrono", "uuid"] }
diesel_migrations = "2"

# Gerenciamento de variáveis de ambiente
dotenvy = "0.15"

# Datas e horas
chrono = { version = "0.4", features = ["serde"] }

# UUIDs
uuid = { version = "1", features = ["v4", "serde"] }

# Autenticação e segurança
jsonwebtoken = "7"
argon2 = "0.5"
rand = "0.8"

# Tokio
tokio = { version = "1", features = ["full"] }

# Header e autenticação
headers = "0.3"