[package]
name = "scheduling"
version = "0.1.0"
edition = "2021"

[dependencies]
# Axum e dependências relacionadas
axum = { version = "0.7.5", features = ["macros", "http1", "http2"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "timeout", "limit", "add-extension"] }
hyper = { version = "1", features = ["full"] }

# Serialização e desserialização
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Banco de dados e migrações
diesel = { version = "2.2", features = ["postgres", "r2d2", "chrono", "uuid"] }
diesel_migrations = "2.1.0"

# Gerenciamento de variáveis de ambiente
dotenvy = "0.15.7"

# Datas e horas
chrono = { version = "0.4", features = ["serde"] }

# UUIDs
uuid = { version = "1.4", features = ["v4", "serde"] }

# Autenticação e segurança
jsonwebtoken = "9.3"
argon2 = "0.5.2"
rand = "0.8"

# Tokio (runtime assíncrono)
tokio = { version = "1", features = ["full"] }

# Regex e validação
regex = "1"
once_cell = "1.19"

# Configuração de logs
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log4rs = "1.2.0"
log = "0.4"

# Testes (opcional)
[dev-dependencies]
tokio-test = "0.4"
